vamoo lo pibeeee

--- a/AppMuvi/app/src/main/AndroidManifest.xml
+++ b/AppMuvi/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:roundIcon="@mipmap/logomuvi_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.Splash_Activity"></activity>
-        <activity android:name=".view.MainActivity">
+        <activity android:name=".view.Splash_Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.MainActivity"></activity>
     </application>
 
 
