--- a/CloudFirebase/app/build.gradle
+++ b/CloudFirebase/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'com.google.firebase:firebase-firestore:21.3.0'
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
 
 }
 
